Fix alignment of the main menu icon

--- a/src/toolbar.less
+++ b/src/toolbar.less
@@ -120,4 +120,5 @@ body:focus-within {
 
 #launcher-pane .global-menu-button:before {
     content: "\eb5f";
+    font-size: 24px;
 }
